--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     .export-area {
       background-color: var(--paper-color);
-      background-image: url('./textures/texture1.png'); /* Replace with actual path */
+      background-image: url('texture1.png'); /* Replace with actual path */
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
