--- a/index.html
+++ b/index.html
@@ -4,47 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Reflection</title>
+  <link rel="preload" href="./caa.ttf" as="font" type="font/ttf" crossorigin>
   <style>
+    @font-face {
+      font-family: 'CustomFont';
+      src: url('./caa.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     :root {
       --paper-color: #fdfdfd;
     }
+
     body {
       margin: 0;
-      font-family: 'Courier New', monospace;
+      font-family: 'CustomFont', sans-serif;
       background-color: #f0f0f0;
     }
+
     .container {
       display: flex;
       height: 100vh;
     }
+
     .sidebar {
       width: 200px;
       padding: 20px;
       background: #fff;
       border-right: 1px solid #ccc;
     }
+
     .main {
       flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 40px;
       background: #f9f9f9;
       overflow-y: auto;
     }
+
     .export-area {
       background-color: var(--paper-color);
-      background-image: url('texture1.png'); /* Replace with actual path */
+      background-image: url('./texture1.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
       padding: 30px;
       border-radius: 6px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      max-width: 800px;
-      margin: 0 auto;
+      width: 800px;
     }
+
     h2 {
       margin-top: 0;
       letter-spacing: 2px;
     }
+
     textarea {
       width: 100%;
       height: 100px;
@@ -53,21 +70,27 @@
       font-size: 14px;
       padding: 10px;
       border: 1px solid #ccc;
-      resize: vertical;
+      resize: none;
+      box-sizing: border-box;
     }
+
     .important-tasks input {
       display: block;
       width: 100%;
       margin-bottom: 10px;
       padding: 8px;
+      box-sizing: border-box;
     }
+
     .controls {
       text-align: center;
       margin-top: 20px;
     }
+
     .controls input[type="color"] {
       margin-right: 10px;
     }
+
     .button {
       padding: 10px 20px;
       font-size: 14px;
