--- a/index.html
+++ b/index.html
@@ -179,38 +179,50 @@
       });
 
       exportBtn.addEventListener('click', () => {
-        const date = new Date();
-        const weekday = ['일', '월', '화', '수', '목', '금', '토'][date.getDay()];
-        const format = `${date.getFullYear()}-${String(date.getMonth()+1).padStart(2,'0')}-${String(date.getDate()).padStart(2,'0')} (${weekday})`;
+  const date = new Date();
+  const weekday = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][date.getDay()];
+  const format = `${date.getFullYear()}-${String(date.getMonth()+1).padStart(2,'0')}-${String(date.getDate()).padStart(2,'0')} (${weekday})`;
 
-        const morning = document.getElementById('morning').value.trim();
-        const evening = document.getElementById('evening').value.trim();
-        const tasks = [1,2,3].map(i => document.getElementById('task'+i).value.trim()).filter(Boolean);
-        const mood = moodOptions.querySelector('.selected')?.textContent || 'None';
+  const morning = document.getElementById('morning').value.trim();
+  const evening = document.getElementById('evening').value.trim();
+  const tasks = [1,2,3].map(i => document.getElementById('task'+i).value.trim()).filter(Boolean);
+  const mood = moodOptions.querySelector('.selected')?.textContent || 'None';
 
-        const wrapper = document.createElement('div');
-        wrapper.className = 'receipt-view';
-        wrapper.innerHTML = `
-          <div class="receipt-section"><strong>MY DAILY RECORD</strong></div>
-          <div class="receipt-section">${format}</div>
-          <div class="receipt-section">MORNING: <br>${morning || '(No entry)'}</div>
-          <div class="receipt-section">MOOD: ${mood}</div>
-          <div class="receipt-section">EVENING: <br>${evening || '(No entry)'}</div>
-          <div class="receipt-section">TOP 3 TASKS:<br>${tasks.length ? tasks.map(t=>'- '+t).join('<br>') : '(No tasks listed)'}</div>
-          <div class="qr-code" id="qrTarget"></div>
-          <div class="receipt-section" style="text-align:center; margin-top:10px;">Thank you for surviving today.</div>
-        `;
+  const wrapper = document.createElement('div');
+  wrapper.className = 'receipt-view';
+  wrapper.innerHTML = `
+    <div class="receipt-section"><strong>MY DAILY RECORD</strong></div>
+    <div class="receipt-section">${format} | <span id='weatherText'>Loading weather...</span></div>
+    <div class="receipt-section">MORNING: <br>${morning || '(No entry)'}</div>
+    <div class="receipt-section">MOOD: ${mood}</div>
+    <div class="receipt-section">EVENING: <br>${evening || '(No entry)'}</div>
+    <div class="receipt-section">TOP 3 TASKS:<br>${tasks.length ? tasks.map(t=>'- '+t).join('<br>') : '(No tasks listed)'}</div>
+    <div class="qr-code" id="qrTarget"></div>
+    <div class="receipt-section" style="text-align:center; margin-top:10px;">Thank you for surviving a day!</div>
+  `;
 
-        document.body.appendChild(wrapper);
-        QRCode.toCanvas(document.createElement('canvas'), 'https://nagi-00.github.io/nagi-receipt/', (err, canvas) => {
-          if (!err) {
-            document.getElementById('qrTarget').appendChild(canvas);
-            html2canvas(wrapper).then(canvas => {
-              const link = document.createElement('a');
-              link.download = 'daily_receipt.png';
-              link.href = canvas.toDataURL();
-              link.click();
-              document.body.removeChild(wrapper);
+  document.body.appendChild(wrapper);
+
+  const qrCanvas = document.createElement('canvas');
+  QRCode.toCanvas(qrCanvas, 'https://nagi-00.github.io/nagi-receipt/', err => {
+    if (!err) {
+      wrapper.querySelector('#qrTarget').appendChild(qrCanvas);
+      fetch('https://wttr.in/Sejong?format=%C+%t')
+        .then(res => res.text())
+        .then(text => {
+          wrapper.querySelector('#weatherText').textContent = text;
+          html2canvas(wrapper).then(canvas => {
+            const link = document.createElement('a');
+            link.download = 'daily_receipt.png';
+            link.href = canvas.toDataURL();
+            link.click();
+            document.body.removeChild(wrapper);
+          });
+        });
+    }
+  });
+});
+              });
             });
           }
         });
